<resources>
    <string name="app_name">AE-1</string>
    <string name="usuario">Usuario</string>
    <string name="calcular">Calcular</string>
    <string name="enviar">Enviar</string>
    <string name="log_in">LOG IN</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
    <string name="hint_user">Introduzca un email</string>
    <string name="password">Contraseña</string>
    <string name="hint_password">Introduzca una contraseña</string>
    <string name="result_login_text">Se ha logueado correctamente</string>
    <string name="hint_invalidez">Introduzca grado</string>
    <string name="hint_salario">Introduzca salario</string>
    <string name="hint_hijos">Introduzca hijos</string>
    <string name="hint_pagas">Introduzca pagas</string>
    <string name="hint_edad">Introduzca edad</string>
    <string name="hint_profesional">Introduzca grupo</string>
    <string name="hint_estadocivil">Introduzca estado</string>
    <string name="salario_bruto_anual">Salario Bruto Anual</string>
    <string name="numero_de_pagas">Número de Pagas</string>
    <string name="edad">Edad</string>
    <string name="grupo_profesional">Grupo Profesional</string>
    <string name="grado_de_discapacidad">Grado de Discapacidad (%)</string>
    <string name="estado_civil">Estado Civil</string>
    <string name="n_mero_de_hijos">Número de Hijos</string>
    <string name="calcular_salario_neto">Calcular Salario Neto</string>
    <string name="resultado">Resultado:</string>
    <string name="titulo_log">Calculadora de Salario</string>
    <string-array name="numero_pagas">
        <item>N. pagas</item>
        <item>12</item>
        <item>14</item>
        <item>16</item>
    </string-array>

    <string-array name="grupos_profesionales">
        <item>G. profesional</item>
        <item>A1</item>
        <item>A2</item>
        <item>B1</item>
        <item>B2</item>
    </string-array>

    <string-array name="grados_discapacidad">
        <item>G. discapacidad</item>
        <item>0%</item>
        <item>33%</item>
        <item>65%</item>
        <item>+ 65%</item>
    </string-array>

    <string-array name="estados_civiles">
        <item>E. civil</item>
        <item>Soltero</item>
        <item>Casado</item>
        <item>Divorciado</item>
        <item>Viudo</item>
    </string-array>


</resources>